<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pref_provider_key">prefProvider</string>
    <string name="pref_icon_key">prefIcon</string>
    <string name="pref_extended_body">prefExtendedBody</string>
    <string name="pref_app_name">prefAppName</string>
    <string name="pref_short_title">prefShortTitle</string>

    <string name="play_store_address_header">play.google.com/store/apps/details?id=</string>
    <string name="play_store_whatsong_address">https://play.google.com/store/apps/details?id=it.tiwiz.whatsong</string>
    <string name="report_object">WhatSong Report</string>

    <string name="app_name">WhatSong</string>
    <string name="expanded_body">Search the song using %s</string>
    <string name="content_description">This extension will launch %s app.</string>
    <string name="pref_provider_summary">In case chosen provider is not installed, Google Now will be launched.</string>
    <string name="pref_provider_title">Choose provider</string>
    <string name="settings_title">WhatSong Settings</string>
    <string name="extension_description">Search for a song using different providers</string>
    <string name="pref_cat_search_provider">Search Provider</string>
    <string name="pref_cat_appearance">Appearance</string>
    <string name="pref_icon_title">Icon</string>
    <string name="pref_icon_summary_on">Provider specific icon will be displayed</string>
    <string name="pref_icon_summary_off">WhatSong icon will be displayed</string>
    <string name="pref_name_title">Name</string>
    <string name="pref_name_summary_on">Provider name will be displayed</string>
    <string name="pref_name_summary_off">WhatSong name will overwrite provider</string>
    <string name="pref_extended_body_title">Extended body</string>
    <string name="pref_extended_body_summary_on">Show extended body in fullscreen mode</string>
    <string name="pref_extended_body_summary_off">Extended body will be hidden</string>
    <string name="pref_short_title_title">Short Title</string>
    <string name="pref_short_title_summary_on">Shows app name in compat layout</string>
    <string name="pref_short_title_summary_off">Hides app name in compat layout</string>
    <string name="card_shortcut_message_title">Specify a name for this shortcut</string>
    <string name="card_shortcut_icon_title">Choose icon for this shortcut</string>
    <string name="switch_text_on">Provider</string>
    <string name="actionbar_create_title">Create shortcut</string>
    <string name="actionbar_create_title_condensed">Accept</string>
    <string name="report_software_label_title">Select software with issues</string>
    <string name="report_software_label_playstore_url">Insert Play Store URL of the target package</string>
    <string name="report_software_comment_title">Feel free to insert a comment /storeabout your issue</string>
    <string name="report_other_software_element">Other…</string>
    <string name="whatsong_report_activity_label">WhatSong Report</string>
    <string name="actionbar_report_send_titleCondensed">Send</string>
    <string name="actionbar_report_send_title">Send report</string>
    <string name="send_report_empty_string_error">Empty string</string>
    <string name="send_report_bad_address_error">Bad address</string>
    <string name="report_sending_message">Sending report...</string>
    <string name="report_sending_message_success">Report sent successfully!</string>
</resources>