<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@android:color/transparent"
                android:gravity="center_vertical">

    <ImageView
            android:layout_width="@dimen/image_max_side"
            android:layout_height="@dimen/image_max_side"
            android:id="@+id/imgLogo"
            android:layout_centerHorizontal="true" android:src="@drawable/ic_launcher_vectorized"
            />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/imgLogo"
            android:layout_alignParentLeft="true" android:id="@+id/linearLayout"
            android:background="@drawable/card_background"
            android:layout_marginLeft="@dimen/card_margin_left" android:layout_marginTop="@dimen/card_margin_top"
            android:layout_marginRight="@dimen/card_margin_right"
            android:layout_marginBottom="@dimen/card_margin_bottom" android:paddingLeft="@dimen/card_padding_left"
            android:paddingTop="@dimen/card_padding_top" android:paddingRight="@dimen/card_padding_right"
            android:paddingBottom="@dimen/card_padding_bottom">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_provider_title"
                android:id="@+id/textView" android:textColor="@color/google_now_element_text_color"
                android:layout_gravity="center" android:gravity="center_vertical|center_horizontal"
                android:background="@android:color/transparent"/>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerInstalledProviders" android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true" android:background="@drawable/card_background"
            android:layout_marginLeft="@dimen/card_margin_left" android:layout_marginTop="@dimen/card_margin_top"
            android:layout_marginRight="@dimen/card_margin_right"
            android:layout_marginBottom="@dimen/card_margin_bottom" android:paddingLeft="@dimen/card_padding_left"
            android:paddingTop="@dimen/card_padding_top" android:paddingRight="@dimen/card_padding_right"
            android:paddingBottom="@dimen/card_padding_bottom" android:id="@+id/linearLayout2">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_shortcut_message_title"
                android:id="@+id/textView2" android:importantForAccessibility="no"
                android:textColor="@color/google_now_element_text_color" android:gravity="center_vertical|center_horizontal"
                android:background="@android:color/transparent"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextShortcutName" android:inputType="textCapWords"
                android:layout_gravity="center" android:gravity="center_vertical|center_horizontal"
                />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="@dimen/card_margin_left"
            android:layout_marginTop="@dimen/card_margin_top" android:layout_marginRight="@dimen/card_margin_right"
            android:layout_marginBottom="@dimen/card_margin_bottom" android:paddingLeft="@dimen/card_padding_left"
            android:paddingTop="@dimen/card_padding_top" android:paddingRight="@dimen/card_padding_right"
            android:paddingBottom="@dimen/card_padding_bottom"
            android:layout_below="@+id/linearLayout2" android:background="@drawable/card_background">
        <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchIcon" android:gravity="center_vertical|center_horizontal"
                android:background="@android:color/transparent"
                android:textOff="@string/app_name"
                android:textOn="@string/switch_text_on" android:text="@string/card_shortcut_icon_title"
                android:textColor="@color/google_now_element_text_color" android:layout_gravity="center"
                android:thumb="@drawable/apptheme_switch_inner_holo_light"
                android:track="@drawable/apptheme_switch_track_holo_light" android:checked="true"/>
    </LinearLayout>



</RelativeLayout>